# virshle

./: .gitignore  CONTRIB.md  Cargo.toml  README.md  ROADMAP.md  args.ts  cloud.test.sh  default.nix  flake.nix  machine.toml  mod.ts  module.nix  nixos-efi-vars.fd  package.nix  parser.ts  pipelight.toml  pipelight.ts  qemu.libvirt.test.sh  qemu.test.sh  result  rust-toolchain.toml  shell.nix  types.ts  virshle.config.toml
actions/: convert.ts  exec.ts  globals.deprec.ts  globals.ts  guards.ts  map.ts  mod.ts
base/cloud-init/: user-data
base/machines/: console.toml  default.toml  default_iso.toml
base/networks/: default.toml
base/pool/: default.toml
cli/: Cargo.toml  build.rs  domain.ts  map.ts  mod.ts  network.ts  pool.ts  volume.ts
cli/src/: lib.rs  types.rs
docs/: .gitignore  .pipelight_ignore  README.md  config.toml  custom_disk.md  install.md  internals.md  multi_node.md  network.md  package.json  pipelight.toml  tsconfig.json
examples/: machine.toml  machine.xml
http/: Cargo.toml
http-over-any/: Cargo.toml
migration/: Cargo.toml  README.md
modules/: cloud-hypervisor.nix  config.nix  default.nix  make-disk-images.nix  network.nix  networking.nix  openvswitch.nix  options.nix  ssh-vsock.nix
scripts/: bridge.sh  cloud.api.test.sh  cloud.test.sh  macvtap.sh  networking.nix  ovs-dpdk.sh  ovs-init.sh  ovs-tap.sh  pipelight-init_template.service  qemu-efi.sh  virshle.api.test.sh  virshle.service
src/: cli.rs  display.rs  error.rs  getter.rs  main.rs  parse_xml.rs  resources.rs  toml.rs
templates/: flake.test.nix
utils/: clean.ts  convert.ts  exec.ts  mod.ts  verbosity.ts
virshle/: Cargo.toml  build.rs
virshle/src/: lib.rs  main.rs
virshle_cli/: Cargo.toml
virshle_cli/src/: lib.rs  tests.rs  types.rs  utils.rs
virshle_core/: Cargo.toml  user-data.toml  virshle.config.bakugo.toml  virshle.config.toml  vm_config_plus.toml
virshle_core/keys/: default  node_default.pub  user  user.pub
virshle_core/src/: cache.rs  config.rs  error.rs  lib.rs  xml.rs
virshle_core/src/api/: client.rs  mod.rs  server_methods.rs
virshle_core/src/api/grpc/: client.rs  mod.rs  server.rs
virshle_core/src/api/rest/: client.rs  method.rs  mod.rs  server.rs  server_methods.rs
virshle_core/src/api/server/: grpc.rs  methods.rs  mod.rs  rest.rs
virshle_core/src/cli/: mod.rs  types.rs  utils.rs
virshle_core/src/cloud_hypervisor/: definition.rs  mod.rs  order.rs  vm.rs  vmm_types.rs
virshle_core/src/cloud_hypervisor/disk/: info.rs  mod.rs  utils.rs
virshle_core/src/cloud_hypervisor/net/: crud.rs  from.rs  getters.rs  interface.rs  mod.rs  to.rs
virshle_core/src/cloud_hypervisor/rand/: mod.rs  names.md  places.md
virshle_core/src/cloud_hypervisor/vm/: account.rs  create.rs  crud.rs  delete.rs  from.rs  getters.rs  init.rs  mod.rs  order.rs  provision.rs  template.rs  to.rs  to_vmm_types.rs
virshle_core/src/config/: cache.rs  definition.rs  dhcp.rs  getters.rs  init.rs  load.rs  mod.rs  node.rs  uri.rs  user_data.rs
virshle_core/src/config/node/: best.rs  info.rs  mod.rs
virshle_core/src/config/template/: disk.rs  mod.rs  vm.rs
virshle_core/src/connection/: mod.rs  node.rs  socket.rs  ssh.rs  state.rs  tcp.rs  uri.rs
virshle_core/src/convert/: mod.rs  names.md  path.rs  template.rs  toml.rs  xml.rs
virshle_core/src/convert/xml/: from.rs  to.deprecated.rs  to.rs
virshle_core/src/database/: connect.rs  crud.rs  mod.rs
virshle_core/src/database/entity/: account.rs  account_vm.rs  lease.rs  mod.rs  net.rs  prelude.rs  vm.rs
virshle_core/src/display/: mod.rs  net.rs  node.rs  secret.rs  utils.rs  vm.rs  vm_template.rs
virshle_core/src/exec/: mod.rs
virshle_core/src/http_api/: client.rs  commons.rs  mod.rs  server.rs
virshle_core/src/http_cli/: http_request.rs  mod.rs  socket.rs  ssh.rs  uri.rs
virshle_core/src/http_request/: mod.rs  node.rs  response.rs  socket.rs  ssh.rs  vm.rs
virshle_core/src/hypervisor/: definition.rs  mod.rs
virshle_core/src/hypervisor/disk/: info.rs  mod.rs  utils.rs
virshle_core/src/hypervisor/rand/: mod.rs  names.md
virshle_core/src/hypervisor/vm/: crud.rs  database.rs  display.rs  from.rs  getters.rs  init.rs  mod.rs  networks.rs
virshle_core/src/hypervisor/vmm/: api.rs  mod.rs  tests.rs  types.rs
virshle_core/src/libvirt/: clean.rs  create.rs  mod.rs  net.rs  secret.rs  vm.rs
virshle_core/src/libvirt.deprec/: clean.rs  net.rs  order.rs
virshle_core/src/network/: README.md  fd.rs  interface.rs  ip.rs  mod.rs  ovs.rs  tap.rs  utils.rs
virshle_core/src/network/dhcp/: fake.rs  kea.rs  kea_old.rs  lease.rs  mod.rs  weak_kea.rs
virshle_core/src/network/dhcp/kea/: methods.rs  mod.rs  types.rs
virshle_core/src/network/ip/: fd.rs  macvtap.rs  mod.rs  tap.rs
virshle_core/src/network/ip/tap/: kernel.rs  mod.rs
virshle_core/src/network/ovs/: convert.rs  getters.rs  json.rs  mod.rs  request.rs  tap.rs  translate.rs
virshle_core/src/node/: best.rs  display.rs  info.rs  mod.rs
virshle_core/src/peer/: best.rs  display.rs  info.rs  mod.rs
virshle_core/src/request/: http.rs  mod.rs  ssh.rs  uri.rs
virshle_core/src/resources/: create.rs  mod.rs  net.rs  secret.rs  vm.rs
virshle_core/src/rest_api/: mod.rs
virshle_core/src/rest_api/client/: methods.rs  mod.rs
virshle_core/src/rest_api/server/: methods.rs  mod.rs  routes.rs
virshle_core/src/templates/: init.env
virshle_core/src/utils/: display.rs  mod.rs  testing.rs
virshle_error/: Cargo.toml
virshle_error/src/: lib.rs
virshle_migration/: Cargo.toml
virshle_migration/src/: create_table.rs  lib.rs  main.rs
virshle_network/: Cargo.toml
virshle_network/src/: lib.rs
virshle_network/src/connection/: mod.rs  socket.rs  ssh.rs  tcp.rs  uri.rs
virshle_network/src/http/: mod.rs  response.rs
virshle_rest/: Cargo.toml
virshle_rest/src/: README.md  commons.rs  lib.rs
virshle_rest/src/client/: display.rs  methods.rs  mod.rs  test.rs  tests.rs
virshle_rest/src/commons/: mod.rs  print.rs  types.rs  utils.rs
virshle_rest/src/e2e_tests/: mod.rs
virshle_rest/src/server/: README.md  methods.rs  mod.rs  routes.rs  tests.rs
(+176 files in other folders)
