[workspace]
resolver = "2"
members = [
  ## Binaries
  # Command line entrypoint.
  "virshle",
  # Daemon entrypoint.
  # "virshle-daemon",

  # Generate sqlite database
  "virshle_migration",

  "virshle_core",

  # Error definitions
  "virshle_error",

]

[workspace.dependencies]

thiserror = "2.0.12"
miette = "7.2.0"
tracing = "0.1.41"
log = "0.4.22"
env_logger = "0.11.5"

pipelight_error = "0.2.14"
bon = "3.5.1"
tokio = { version = "1.40.0", features = ["full"] }

bat = "0.25.0"
russh = "0.56.0"
