[package]
name = "virshle"
version = "0.2.0"
edition = "2021"
authors = ["areskul"]
description = "A modern virtual machine manager"
homepage = "https://github.com/pipelight/virshle"
repository = "git@github.com:pipelight/virshle.git"

[lib]
name = "virshle"
path = "src/lib.rs"

[[bin]]
name = "virshle"
path = "src/main.rs"
doc = false

[dependencies]
miette = { workspace = true, features = ["fancy"] }
log.workspace = true
tracing.workspace = true

tokio = { version = "1.40.0", features = ["full"] }

virshle_core = { path = "../virshle_core" }
virshle_error = { path = "../virshle_error" }


[build-dependencies]
miette = { workspace = true, features = ["fancy"] }
log.workspace = true
tracing.workspace = true

tokio.workspace = true

clap = "4.5.20"
clap_complete = "4.5.33"

virshle_core = { path = "../virshle_core/" }
