[package]
name = "virshle"
version = "0.2.0"
edition = "2021"
authors = ["areskul"]
description = "A modern virtual machine manager"
homepage = "https://github.com/pipelight/virshle"
repository = "git@github.com:pipelight/virshle.git"

[lib]
name = "virshle"
path = "src/lib.rs"

[[bin]]
name = "virshle"
path = "src/main.rs"
doc = false

[dependencies]
miette = { workspace = true, features = ["fancy"] }
log.workspace = true
tracing.workspace = true

virshle_cli = { path = "../virshle_cli" }
virshle_error = { path = "../virshle_error" }

tokio = { version = "1.40.0", features = ["full"] }


[build-dependencies]

virshle_cli = { path = "../virshle_cli" }
virshle_error = { path = "../virshle_error" }

miette = { workspace = true, features = ["fancy"] }
log.workspace = true
tracing.workspace = true

tokio.workspace = true
