[package]
name = "virshle"
version = "0.3.0"
edition = "2021"
authors = ["areskul"]
description = "A modern virtual machine manager"
homepage = "https://github.com/pipelight/virshle"
repository = "git@github.com:pipelight/virshle.git"

[lib]
name = "virshle"
path = "src/lib.rs"

[[bin]]
name = "virshle"
path = "src/main.rs"
doc = false

[dependencies]
miette = { workspace = true, features = ["fancy"] }
log.workspace = true
tracing.workspace = true

virshle_cli = { path = "../virshle_cli" }
virshle_core = { path = "../virshle_core" }
virshle_error = { path = "../virshle_error" }

tokio = { version = "1.40.0", features = ["full"] }
clap = "4.5.20"
clap_complete = "4.6.0"


[build-dependencies]

virshle_cli = { path = "../virshle_cli" }
virshle_error = { path = "../virshle_error" }

miette = { workspace = true, features = ["fancy"] }
log.workspace = true
tracing.workspace = true

tokio.workspace = true

clap = "4.5.20"
clap_complete = "4.6.0"
