[package]
name = "virshle_cli"
version = "0.1.2"
edition = "2021"

[dependencies]
thiserror.workspace = true
miette = { workspace = true, features = ["fancy"] }
log.workspace = true
env_logger.workspace = true
tokio = { workspace = true, features = ["mio", "tracing"] }
bon.workspace = true
bat.workspace = true


virshle_error = { path = "../virshle_error" }
virshle_rest = { path = "../virshle_rest" }
virshle_core = { path = "../virshle_core" }

pipelight_exec = "0.4.11"
# pipelight_exec = { path = "../../pipelight/pipelight_exec" }

serde_json = { version = "1.0.128", features = ["preserve_order"] }
serde = { version = "1.0.210", features = ["derive"] }
tabled.workspace = true
convert_case = "0.10.0"
owo-colors.workspace = true
uuid = { version = "1.10.0", features = ["serde", "v4"] }
indexmap.workspace = true

toml = { version = "0.9.5", features = ["parse", "preserve_order"] }
human_bytes.workspace = true
rand = "0.9.0"
regex = "1.10.6"

# Cli
clap-verbosity-flag = { version = "3.0.2", features = ["tracing"] }
clap = "4.5.20"

macaddr = { version = "1.0.1", features = ["serde", "serde_std"] }
futures = "0.3.31"
users = "0.11.0"

serde_with = "3.12.0"
ipnet = { version = "2.11.0", features = ["serde"] }
chrono = { version = "0.4.41", features = ["now", "serde"] }
jiff = { version = "0.2.15", features = ["serde"] }
kdl = "6.3.4"
bytes = "1.10.1"
spinoff = "0.8.0"

# command-fds = "0.3.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["ansi", "env-filter"] }
tracing-log = "0.2.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
