[package]
name = "virshle_core"
version = "0.1.1"
edition = "2021"

[dependencies]

virshle_error = { path = "../virshle_error" }
pipelight_exec = "0.4.9"

miette = { version = "7.2.0", features = ["fancy"] }
serde_json = { version = "1.0.128", features = ["preserve_order"] }
log = "0.4.22"
thiserror = "2.0.12"
serde = { version = "1.0.210", features = ["derive"] }
# tabled = { version = "0.16.0", features = ["ansi"] }
tabled = { version = "0.19.0", features = ["ansi"] }
strum = { version = "0.27.1", features = ["derive"] }
convert_case = "0.8.0"
owo-colors = "4.1.0"
env_logger = "0.11.5"
uuid = { version = "1.10.0", features = ["serde", "v4"] }

toml = { version = "0.8.19", features = ["parse", "preserve_order"] }
bat = "0.25.0"
crossterm = "0.29.0"

shellexpand = "3.1.0"
once_cell = "1.19.0"
human_bytes = "0.4.3"
names = "0.14.0"
rand = "0.9.0"
regex = "1.10.6"
bon = "3.5.1"
reqwest = "0.12.7"
tokio = { version = "1.40.0", features = ["full"] }
hyper = { version = "1.4.1", features = ["full"] }
http-body-util = "0.1.2"
hyper-util = "0.1.9"
ureq = "3.0.10"

sea-orm = { version = "1.0.1", features = [
  "runtime-tokio-rustls",
  "sqlx-sqlite",
  "with-json",
  "macros",
] }
virshle_migration = { path = "../virshle_migration" }
russh = "0.52.0"
url = "2.5.2"
async-trait = "0.1.88"
axum = { version = "0.8.3", features = ["json"] }

# Cli
clap-verbosity-flag = "3.0.2"
clap = "4.5.20"
clap_complete = "4.5.33"
tower = { version = "0.5.2", features = ["util"] }
macaddr = { version = "1.0.1", features = ["serde"] }
futures = "0.3.31"
users = "0.11.0"
tower-http = { version = "0.6.2", features = ["trace"] }
sysinfo = { version = "0.35.0", features = ["serde"] }
tonic = { version = "0.13.1", features = ["zstd"] }
# tonic-rpc = { path = "/home/anon/.ghr/github.com/pipelight/tonic-rpc/tonic-rpc", features = [
#   "bincode",
#   "json",
# ] }
tokio-stream = "0.1.17"

# tappers = "0.4.2"
# tappers = { git = "ssh://git@github.com/pipelight/tappers.git", branch = "dev" }
# tappers = { git = "https://github.com/pipelight/tappers", branch = "dev" }
tappers = { path = "/home/anon/.ghr/github.com/pkts-rs/tappers" }

libc = "0.2.172"
serde_with = "3.12.0"
whoami = "1.6.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
