[package]
name = "virshle_core"
version = "0.1.1"
edition = "2021"

[dependencies]
miette = { workspace = true, features = ["fancy"] }
log.workspace = true
env_logger.workspace = true

tokio.workspace = true
bon.workspace = true

virshle_error = { path = "../virshle_error" }
pipelight_exec = "0.4.11"
# pipelight_exec = { path = "../../pipelight/pipelight_exec" }

serde_json = { version = "1.0.128", features = ["preserve_order"] }
serde = { version = "1.0.210", features = ["derive"] }
# tabled = { version = "0.16.0", features = ["ansi"] }
tabled = { version = "0.20.0", features = ["ansi"] }
convert_case = "0.8.0"
owo-colors = "4.1.0"
uuid = { version = "1.10.0", features = ["serde", "v4"] }

toml = { version = "0.9.5", features = ["parse", "preserve_order"] }
bat = "0.25.0"
crossterm = "0.29.0"
once_cell = "1.19.0"
human_bytes = "0.4.3"
rand = "0.9.0"
regex = "1.10.6"

reqwest = "0.12.7"
hyper = { version = "1.4.1", features = ["full"] }
http-body-util = "0.1.2"
hyper-util = "0.1.9"

sea-orm = { version = "1.0.1", features = [
  "runtime-tokio-rustls",
  "sqlx-sqlite",
  "with-json",
  "macros",
] }
virshle_migration = { path = "../virshle_migration" }
russh = "0.54.1"
url = "2.5.2"
async-trait = "0.1.88"
axum = { version = "0.8.3", features = ["json"] }

# Cli
clap-verbosity-flag = "3.0.2"
clap = "4.5.20"
macaddr = { version = "1.0.1", features = ["serde", "serde_std"] }
futures = "0.3.31"
users = "0.11.0"
tower-http = { version = "0.6.2", features = ["trace"] }
sysinfo = { version = "0.37.0", features = ["serde"] }

tower = { version = "0.5.2", features = ["util"] }

# tonic = { version = "0.13.1", features = ["zstd"] }
# tonic-rpc = { path = "/home/anon/.ghr/github.com/pipelight/tonic-rpc/tonic-rpc", features = [
#   "bincode",
#   "json",
# ] }

# tokio-stream = "0.1.17"

# use this one for easy fd.
# tappers = { git = "https://github.com/pipelight/tappers", branch = "dev" }

tappers = "0.4.2"
# tappers = { git = "ssh://git@github.com/pipelight/tappers.git", branch = "dev" }
# tappers = { path = "/home/anon/.ghr/github.com/pkts-rs/tappers" }


libc = "0.2.172"
serde_with = "3.12.0"
unindent = "0.2.4"
ipnet = { version = "2.11.0", features = ["serde"] }
chrono = { version = "0.4.41", features = ["now", "serde"] }
csv = "1.3.1"
jiff = { version = "0.2.15", features = ["serde"] }
spinoff = "0.8.0"
kdl = "6.3.4"
dirs = "6.0.0"
bytes = "1.10.1"
sys-mount = { version = "3.0.1", features = ["loop"] }
command-fds = "0.3.2"

[dev-dependencies]
pretty_assertions = "1.4.1"
