[package]
name = "virshle_core"
version = "0.1.1"
edition = "2021"

[dependencies]
thiserror.workspace = true
miette = { workspace = true, features = ["fancy"] }
log.workspace = true
env_logger.workspace = true
tokio = { workspace = true, features = ["mio", "tracing"] }
bon.workspace = true
bat.workspace = true

russh.workspace = true
rand_core.workspace = true
rand = "0.9.0"

radicle-crypto.workspace = true
# sqlite3-sys.workspace = true

sea-orm.workspace = true

virshle_error = { path = "../virshle_error" }
virshle_network = { path = "../virshle_network" }

pipelight_exec = "0.4.11"
# pipelight_exec = { path = "../../pipelight/pipelight_exec" }

serde_json = { version = "1.0.128", features = ["preserve_order"] }
serde = { version = "1.0.210", features = ["derive"] }
tabled.workspace = true
convert_case = "0.10.0"
owo-colors.workspace = true
uuid = { version = "1.10.0", features = ["serde", "v4"] }

toml = { version = "0.9.5", features = ["parse", "preserve_order"] }
crossterm = "0.29.0"
once_cell.workspace = true
human_bytes = "0.4.3"
regex = "1.10.6"

reqwest = "0.13.1"
hyper = { version = "1.4.1", features = ["full"] }
http-body-util = "0.1.2"
hyper-util = "0.1.9"


virshle_migration = { path = "../virshle_migration" }
url = "2.5.2"
async-trait = "0.1.88"
axum = { version = "0.8.3", features = ["json"] }

# Cli
clap-verbosity-flag = { version = "3.0.2", features = ["tracing"] }
clap = "4.5.20"
macaddr = { version = "1.0.1", features = ["serde", "serde_std"] }
futures = "0.3.31"
users = "0.11.0"
tower-http = { version = "0.6.2", features = ["trace"] }
sysinfo = { version = "0.37.0", features = ["serde"] }

tower = { version = "0.5.2", features = ["util"] }

## Cloud hypervisor and deps
# vmm = { git = "https://github.com/cloud-hypervisor/cloud-hypervisor", tag = "v50.0", features = [
#   "kvm",
# ] }

tappers = "0.4.2"
# tappers = { git = "ssh://git@github.com/pipelight/tappers.git", branch = "dev" }
# tappers = { path = "/home/anon/.ghr/github.com/pkts-rs/tappers" }


libc = "0.2.172"
serde_with = "3.12.0"
unindent = "0.2.4"
ipnet = { version = "2.11.0", features = ["serde"] }
chrono = { version = "0.4.41", features = ["now", "serde"] }
csv = "1.3.1"
jiff = { version = "0.2.15", features = ["serde"] }
kdl = "6.3.4"
dirs = "6.0.0"
bytes = "1.10.1"
sys-mount = { version = "3.0.1", features = ["loop"] }
# command-fds = "0.3.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["ansi", "env-filter"] }
tracing-log = "0.2.0"
derivative = "2.2.0"
tokio-scoped = "0.2.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
