[package]
name = "virshle_error"
version = "0.1.1"
edition = "2021"

[dependencies]

pipelight_error = "0.2.11"

thiserror = "2.0.12"
miette = { version = "7.2.0", features = ["fancy"] }

serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128", features = ["preserve_order"] }
toml = { version = "0.8.19", features = ["parse", "preserve_order"] }

strum = { version = "0.27.1", features = ["derive"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
bat = "0.25.0"
bon = "3.5.1"
reqwest = "0.12.7"

# http
hyper = { version = "1.4.1", features = ["full"] }

url = "2.5.2"
sea-orm = { version = "1.0.1" }
russh = "0.52.0"
axum = "0.8.4"
http-body-util = "0.1.3"
tonic = { version = "0.13.1", features = ["zstd"] }
tarpc = "0.36.0"
