[package]
name = "virshle_error"
version = "0.1.1"
edition = "2021"

[dependencies]

thiserror.workspace = true
miette = { workspace = true, features = ["fancy"] }
bon.workspace = true

pipelight_error.workspace = true
bat.workspace = true
russh.workspace = true

serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128", features = ["preserve_order"] }

strum = { version = "0.27.1", features = ["derive"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }

# http
hyper = { version = "1.4.1", features = ["full"] }

url = "2.5.2"
sea-orm = { version = "1.0.1" }
axum = "0.8.4"
csv = "1.3.1"
log = "0.4.27"
tokio.workspace = true
tracing.workspace = true
