[package]
name = "virshle_migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "virshle_migration"
path = "src/lib.rs"

[dependencies]
miette = { version = "7.2.0", features = ["fancy"] }
tokio = { version = "1.37.0", features = ["full"] }
async-std = { version = "1", features = ["attributes", "tokio1"] }
sea-orm = { version = "1.0.1", features = [
  "runtime-tokio-rustls",
  "sqlx-sqlite",
  "with-json",
  "macros",
] }
strum = { version = "0.27.1", features = ["derive"] }

[dependencies.sea-orm-migration]
version = "1.0.1"
features = ["runtime-tokio-rustls", "sqlx-sqlite"]
